FixSwaggerForAuthor
